--- a/coup.cabal
+++ b/coup.cabal
@@ -23,11 +23,14 @@ library
   hs-source-dirs: src
   exposed-modules:
       Coup
+    , Coup.Random
   build-depends:
       base ==4.*
     , containers
     , operational
     , random
+    , random-shuffle
+    , MonadRandom
     , mtl
     , text
     , transformers
